--- a/server/package.json
+++ b/server/package.json
@@ -13,5 +13,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0"
+  },
+  "engines": {
+    "node": "14.16.0"
   }
 }
