--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd server && npm start"
+    "start": "cd frontend && npm run build && cd .. && cd server && npm start"
   },
   "keywords": [],
   "author": "",
