Testing heroku w/ npm scripts 7

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "heroku-prebuild": "npm i -f",
+    "heroku-postbuild": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
