--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-prebuild": "npm i -f",
+    "heroku-postbuild": "npm run build",
     "start": "concurrently \"cd frontend && npm install && npm run build\" \"cd server && npm start\""
   },
   "keywords": [],
